interfaces/julia/src/generated/libctonedim.jl

# This file was generated by generate/generate_bindings.jl.
# Source header: cantera_clib/ctonedim.h
# DO NOT EDIT: regenerate with `julia generate/generate_bindings.jl`.

function sim1D_newSim1D(domainsLen, domains)
    ccall((:sim1D_newSim1D, libcantera[]), Int32, (Int32, Ptr{Int32},), domainsLen, domains)
end

function sim1D_show(handle)
    ccall((:sim1D_show, libcantera[]), Int32, (Int32,), handle)
end

function sim1D_setTimeStep(handle, stepsize, tstepsLen, tsteps)
    ccall((:sim1D_setTimeStep, libcantera[]), Int32, (Int32, Float64, Int32, Ptr{Int32},), handle, stepsize, tstepsLen, tsteps)
end

function sim1D_getInitialSoln(handle)
    ccall((:sim1D_getInitialSoln, libcantera[]), Int32, (Int32,), handle)
end

function sim1D_solve(handle, loglevel, refine_grid)
    ccall((:sim1D_solve, libcantera[]), Int32, (Int32, Int32, Int32,), handle, loglevel, refine_grid)
end

function sim1D_refine(handle, loglevel)
    ccall((:sim1D_refine, libcantera[]), Int32, (Int32, Int32,), handle, loglevel)
end

function sim1D_setRefineCriteria(handle, dom, ratio, slope, curve, prune)
    ccall((:sim1D_setRefineCriteria, libcantera[]), Int32, (Int32, Int32, Float64, Float64, Float64, Float64,), handle, dom, ratio, slope, curve, prune)
end

function sim1D_setGridMin(handle, dom, gridmin)
    ccall((:sim1D_setGridMin, libcantera[]), Int32, (Int32, Int32, Float64,), handle, dom, gridmin)
end

function sim1D_save(handle, fname, name, desc, overwrite)
    ccall((:sim1D_save, libcantera[]), Int32, (Int32, Cstring, Cstring, Cstring, Int32,), handle, fname, name, desc, overwrite)
end

function sim1D_restore(handle, fname, name)
    ccall((:sim1D_restore, libcantera[]), Int32, (Int32, Cstring, Cstring,), handle, fname, name)
end

function sim1D_writeStats(handle, printTime)
    ccall((:sim1D_writeStats, libcantera[]), Int32, (Int32, Int32,), handle, printTime)
end

function sim1D_domainIndex(handle, name)
    ccall((:sim1D_domainIndex, libcantera[]), Int32, (Int32, Cstring,), handle, name)
end

function sim1D_eval(handle, xLen, x, rLen, r, rdt, count)
    ccall((:sim1D_eval, libcantera[]), Int32, (Int32, Int32, Ptr{Float64}, Int32, Ptr{Float64}, Float64, Int32,), handle, xLen, x, rLen, r, rdt, count)
end

function sim1D_setMaxJacAge(handle, ss_age, ts_age)
    ccall((:sim1D_setMaxJacAge, libcantera[]), Int32, (Int32, Int32, Int32,), handle, ss_age, ts_age)
end

function sim1D_setFixedTemperature(handle, t)
    ccall((:sim1D_setFixedTemperature, libcantera[]), Int32, (Int32, Float64,), handle, t)
end

function sim1D_del(handle)
    ccall((:sim1D_del, libcantera[]), Int32, (Int32,), handle)
end

function sim1D_cabinetSize()
    ccall((:sim1D_cabinetSize, libcantera[]), Int32, ())
end
